Added a bunch of feature images..

--- a/index.html
+++ b/index.html
@@ -26,6 +26,54 @@
             <div class="browser"></div>
         </div>
 
+        <div class="features clearfix">
+            <h2>Managing work shifts has never been easier</h2>
+            <div class="feature">
+                <img src="img/feature-1.png" height="150" width="150">
+                Hours allows a manager to easily create weekly shifts for all employees.
+            </div>
+            <div class="feature">
+                <img src="img/feature-2.png" height="150" width="150">
+                With the click of a button your weekly roster can be sent to all employees.
+            </div>
+            <div class="feature">
+                <img src="img/feature-3.png" height="150" width="150">
+                Once published or changed, on instant notification will be sent to all employees letting them see their hours for that week.
+            </div>
+        </div>
+
+        <div class="features clearfix">
+            <h2>Struggling to find a shift swap becomes a thing of the past</h2>
+            <div class="feature">
+                <img src="img/feature-1.png" height="150" width="150">
+                With the tap of a button you can notify your employer that a certain shift doesn’t suit you
+            </div>
+            <div class="feature">
+                <img src="img/feature-2.png" height="150" width="150">
+                A notification will instantly be sent directly to your employer informing them of the problem
+            </div>
+            <div class="feature">
+                <img src="img/feature-3.png" height="150" width="150">
+                Employers can edit shifts from right within the app so that everyone is happy.
+            </div>
+        </div>
+
+        <div class="features clearfix">
+            <h2>The benefits leave little to be desired</h2>
+            <div class="feature">
+                <img src="img/feature-1.png" height="150" width="150">
+                Helpful suggestions prompt you to fill out upcoming rosters from scratch or using lasts weeks as a template
+            </div>
+            <div class="feature">
+                <img src="img/feature-2.png" height="150" width="150">
+                Rosters can be imported from Excel if that how you’re used to doing things
+            </div>
+            <div class="feature">
+                <img src="img/feature-3.png" height="150" width="150">
+                Employers and employees alike can integrate the shifts right into their personal calendars or export to PDF
+            </div>
+        </div>
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
