Added the rest of the styles for the page.

--- a/index.html
+++ b/index.html
@@ -27,51 +27,60 @@
         </div>
 
         <div class="features clearfix">
-            <h2>Managing work shifts has never been easier</h2>
+            <h2>Managing work shifts has never been easier.</h2>
             <div class="feature">
                 <img src="img/feature-1.png" height="150" width="150">
-                Hours allows a manager to easily create weekly shifts for all employees.
+                Managers can use our online application to quickly and easily create the weekly shift schedule.
             </div>
             <div class="feature">
                 <img src="img/feature-2.png" height="150" width="150">
-                With the click of a button your weekly roster can be sent to all employees.
+                Each employee on the schedule will recieve a notification of their hours as soon as they're published.
             </div>
             <div class="feature">
                 <img src="img/feature-3.png" height="150" width="150">
-                Once published or changed, on instant notification will be sent to all employees letting them see their hours for that week.
+                Any subsequent changes to the schedule will trigger notifications to the employees involved.
             </div>
         </div>
 
         <div class="features clearfix">
-            <h2>Struggling to find a shift swap becomes a thing of the past</h2>
+            <h2>Swap shifts without the headache</h2>
             <div class="feature">
-                <img src="img/feature-1.png" height="150" width="150">
-                With the tap of a button you can notify your employer that a certain shift doesn’t suit you
+                <img src="img/feature-4.png" height="150" width="150">
+                Notify your employer that a certain shift doesn’t suit you with a single click in our native apps.
             </div>
             <div class="feature">
-                <img src="img/feature-2.png" height="150" width="150">
-                A notification will instantly be sent directly to your employer informing them of the problem
+                <img src="img/feature-5.png" height="150" width="150">
+                Your employer will be instantly sent a notification alerting them of your request to swap.
             </div>
             <div class="feature">
-                <img src="img/feature-3.png" height="150" width="150">
-                Employers can edit shifts from right within the app so that everyone is happy.
+                <img src="img/feature-6.png" height="150" width="150">
+                Using the apps for iOS and Android, your employer can modify the schedule from anywhere.
             </div>
         </div>
 
         <div class="features clearfix">
-            <h2>The benefits leave little to be desired</h2>
+            <h2>Your work schedule, whenever and wherever you need it</h2>
             <div class="feature">
-                <img src="img/feature-1.png" height="150" width="150">
-                Helpful suggestions prompt you to fill out upcoming rosters from scratch or using lasts weeks as a template
+                <img src="img/feature-7.png" height="150" width="150">
+                Create your schedules in no time with just a few clicks and drags in our web application.
             </div>
             <div class="feature">
-                <img src="img/feature-2.png" height="150" width="150">
-                Rosters can be imported from Excel if that how you’re used to doing things
+                <img src="img/feature-8.png" height="150" width="150">
+                Or import your schedule from Excel if that's what how you would usually work.
             </div>
             <div class="feature">
-                <img src="img/feature-3.png" height="150" width="150">
-                Employers and employees alike can integrate the shifts right into their personal calendars or export to PDF
+                <img src="img/feature-9.png" height="150" width="150">
+                Integrate your work schedule right into their personal calendars or export to PDF for printing.
             </div>
+        </div>
+
+        <div class="actions">
+            <p>Hours is currently in active development and will be ready to go soon.</p>
+            <p>We would love to hear you ideas though, you can get in touch on <a href="http://www.twitter.com/mrockall">twitter</a> or you can join our mailing list to be notified as soon as we launch.</p>
+            <form method="post" action="#">
+                <input type="text" placeholder="Join our mailing list" />
+                <input type="submit" />
+            </form>
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
