Added the mailchimp form

--- a/index.html
+++ b/index.html
@@ -77,16 +77,21 @@
         <div class="actions">
             <p>Hours is currently in active development and will be ready to go soon.</p>
             <p>We would love to hear you ideas though, you can get in touch on <a href="http://www.twitter.com/mrockall">twitter</a> or you can join our mailing list to be notified as soon as we launch.</p>
-            <form method="post" action="#">
-                <input type="text" placeholder="Join our mailing list" />
-                <input type="submit" />
+
+            <!-- Begin MailChimp Signup Form -->
+            <!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css"> -->
+            <div id="mc_embed_signup">
+            <form action="//gethours.us9.list-manage.com/subscribe/post?u=854b6fe4b20e4276f5a1e30ef&amp;id=77bc1a9e3f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your email address" required>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;"><input type="text" name="b_854b6fe4b20e4276f5a1e30ef_77bc1a9e3f" tabindex="-1" value=""></div>
+                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
             </form>
+            </div>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <!--End mc_embed_signup-->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
