--- a/index.html
+++ b/index.html
@@ -90,8 +90,6 @@
             </div>
         </div>
 
-        <!--End mc_embed_signup-->
-
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -99,7 +97,7 @@
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+            ga('create','UA-56786741-1','auto');ga('send','pageview');
         </script>
     </body>
 </html>
