--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <div class="actions">
             <p>Hours is currently in active development and will be ready to go soon.</p>
-            <p>We would love to hear you ideas though, you can get in touch on <a href="http://www.twitter.com/mrockall">twitter</a> or you can join our mailing list to be notified as soon as we launch.</p>
+            <p>We would love to hear you ideas though, you can get in touch on <a href="http://www.twitter.com/getmyhours" target="_blank">twitter</a> or you can join our mailing list to be notified as soon as we launch.</p>
 
             <!-- Begin MailChimp Signup Form -->
             <!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css"> -->
