Added an iPhone screenshot and rearranged those elements below the hero image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         <div class="hero">
             <div class="brand">Hours</div>
             <div class="tagline">Never miss a shift again</div>
+        </div>
+
+        <div class="devices">
             <div class="browser"></div>
+            <div class="phone"></div>
         </div>
 
         <div class="features clearfix">
