--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <![endif]-->
 
         <div class="hero">
-            <div class="brand">Hours</div>
-            <div class="tagline">Never miss a shift again</div>
+            <div class="brand js-animate-hero-in">Hours</div>
+            <div class="tagline js-animate-hero-in">Never miss a shift again</div>
         </div>
 
         <div class="devices">
-            <div class="browser"></div>
-            <div class="phone"></div>
+            <div class="browser js-animate-devices-in"></div>
+            <div class="phone js-animate-devices-in"></div>
         </div>
 
         <div class="features clearfix">
@@ -94,7 +94,7 @@
             </div>
         </div>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script type="text/javascript" src="js/dist/application.js"></script>
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
